--- a/style.css
+++ b/style.css
@@ -1,11 +1,143 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
 .inter {
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-style: normal;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
+
+body {
+    max-width: 1600px;
+    background-color: rgba(255, 255, 255, 1);
+}
+
+/* .btn a{
+    text-decoration: none;
+    font-size:16px;
+    font-weight: 600;
+    color: rgba(255, 255, 255, 1);
+    background-color:rgba(70, 145, 101, 1) ;
+    padding: 12px 16px;
+    margin-top: 24px;
+} */
+
+
+
+/* Header section Css style start  */
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 16px 120px;
+}
+
+nav ul {
+    display: flex;
+    gap: 32px;
+}
+
+nav ul li {
+    list-style: none;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: rgba(0, 0, 0, 1);
+}
+
+.btn a {
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 600;
+    color: rgba(255, 255, 255, 1);
+    background-color: rgba(70, 145, 101, 1);
+    padding: 12px 16px;
+    margin-top: 24px;
+    border-radius: 5px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.238);
+}
+
+/* Header section Css style end */
+
+/* banner section start  */
+
+.hero {
+    background-image: url(./assets/hero-bg.png);
+    width: 100%;
+    text-align: center;
+}
+
+.botn a {
+
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 600;
+    color: rgba(70, 145, 101, 1);
+    background-color: rgba(255, 255, 255, 1);
+    padding: 8px 16px;
+
+    border-radius: 16px;
+
+}
+
+.botn {
+    padding-top: 100px;
+}
+
+.hero h1 {
+    font-size: 84px;
+    font-weight: 700;
+    margin-top: 18px;
+    color:rgba(255, 255, 255, 1) ;
+
+}
+
+.hero h1 span {
+    color: rgba(48, 184, 104, 1);
+}
+
+.hero p {
+    font-size: 16px;
+    font-weight: 600px;
+    color: rgba(255, 255, 255, 1);
+    padding-top: 24px;
+    padding-bottom: 24px;
+    word-spacing: 0.2em;
+}
+
+.btnn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding-bottom: 180px;
+    margin-top: 32px;
+}
+
+.btn_one a {
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 600;
+    color: rgba(255, 255, 255, 1);
+    background-color: rgba(70, 145, 101, 1);
+    padding: 16px;
+}
+
+.See_btn a {
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 600;
+    color: rgba(255, 255, 255, 1);
+    border: 1px solid rgba(255, 255, 255, 1);
+    padding: 16px;
+}
+
+
+
+/* banner css style end  */
 
