--- a/style.css
+++ b/style.css
@@ -3,9 +3,11 @@
     padding: 0;
 }
 
+
 .inter {
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
+    font-weight: <weight>;
     font-style: normal;
 }
 
@@ -13,17 +15,6 @@ body {
     max-width: 1600px;
     background-color: rgba(255, 255, 255, 1);
 }
-
-/* .btn a{
-    text-decoration: none;
-    font-size:16px;
-    font-weight: 600;
-    color: rgba(255, 255, 255, 1);
-    background-color:rgba(70, 145, 101, 1) ;
-    padding: 12px 16px;
-    margin-top: 24px;
-} */
-
 
 
 /* Header section Css style start  */
@@ -93,7 +84,7 @@ nav ul li a {
     font-size: 84px;
     font-weight: 700;
     margin-top: 18px;
-    color:rgba(255, 255, 255, 1) ;
+    color: rgba(255, 255, 255, 1);
 
 }
 
@@ -103,7 +94,7 @@ nav ul li a {
 
 .hero p {
     font-size: 16px;
-    font-weight: 600px;
+    font-weight: 400px;
     color: rgba(255, 255, 255, 1);
     padding-top: 24px;
     padding-bottom: 24px;
@@ -141,3 +132,135 @@ nav ul li a {
 
 /* banner css style end  */
 
+/* notes section start  */
+
+.carcle {
+    width: 50px;
+    height: 50px;
+    background-color: rgba(249, 85, 85, 1);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.some_txt {
+    margin-top: 80px;
+}
+
+.some_txt {
+    text-align: center;
+}
+
+.some_txt h1 {
+    font-size: 48px;
+    font-weight: 700;
+    color: rgba(0, 25, 49, 1);
+}
+
+.some_txt p {
+    font-size: 16px;
+    font-weight: 400;
+    color: rgba(98, 115, 130, 1);
+    margin-top: 16px;
+
+}
+
+/* card div css style start  */
+#cards {
+    width: 85%;
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    align-content: center;
+    margin: 0 auto;
+    margin-top: 44px;
+    /* margin-left: 120px;
+    margin-right: 120px; */
+}
+
+.cad {
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.334);
+}
+
+.cad .carcle {
+    margin: 0 auto;
+    margin-top: 50px;
+}
+
+.cad h3 {
+    text-align: center;
+    font-size: 24px;
+    font-weight: 600;
+    color: rgba(0, 25, 49, 1);
+    margin-top: 16px;
+}
+
+.cad p {
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    color: rgba(98, 115, 130, 1);
+    padding: 16px;
+    /* margin-top: 16px; */
+    margin-bottom: 24px;
+
+}
+
+
+
+/* card div css style end  */
+/* notes section end  */
+
+/* brain section css style :start  */
+.brain {
+    margin: 0 auto;
+    margin-top: 80px;
+    width: 85%;
+    display: flex;
+    justify-content: center;
+    gap: 60px;
+    align-items: center;
+}
+
+.brain_text .top_p {
+    font-size: 16px;
+    font-weight: 500;
+    color: rgba(70, 145, 101, 1);
+}
+
+.brain_text h1 {
+    font-size: 48px;
+    font-weight: 700;
+    color: rgba(0, 25, 49, 1);
+    margin-top: 20px;
+}
+
+.brain_text p {
+    font-size: 16px;
+    font-weight: 400;
+    color: rgba(98, 115, 130, 1);
+    margin-top: 16px;
+}
+
+.brain_text ul {
+    list-style: none;
+    margin-top: 40px;
+}
+
+.brain_text ul li {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    margin-bottom: 16px;
+}
+
+.brain_text ul li img {
+    font-size: 16px;
+    font-weight: 500;
+    color: rgb(0, 8, 15);
+}
+
+
+
+/* brain section css style end  */
