--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ nav ul li a {
     color: rgba(255, 255, 255, 1);
     background-color: rgba(70, 145, 101, 1);
     padding: 16px;
+    border-radius: 10px;
 }
 
 .See_btn a {
@@ -126,6 +127,7 @@ nav ul li a {
     color: rgba(255, 255, 255, 1);
     border: 1px solid rgba(255, 255, 255, 1);
     padding: 16px;
+    border-radius: 10px;
 }
 
 
@@ -264,3 +266,111 @@ nav ul li a {
 
 
 /* brain section css style end  */
+
+.joing {
+    background-color: rgba(247, 246, 242, 1);
+    text-align: center;
+    width: 85%;
+    margin: 0 auto;
+    margin-top: 80px;
+}
+
+
+
+
+.joing h1 {
+    font-size: 48px;
+    font-weight: 700;
+    padding-top: 80px;
+    color: rgb(7, 0, 0);
+
+}
+
+
+.joing p {
+    font-size: 16px;
+    font-weight: 400px;
+    color: rgba(98, 115, 130, 1);
+    padding-top: 24px;
+    padding-bottom: 24px;
+    word-spacing: 0.2em;
+}
+
+.joing .btnns {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    /* padding-bottom: 180px; */
+    margin-top: 24px;
+}
+
+.joing .btn_two a {
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 600;
+    color: rgba(255, 255, 255, 1);
+    background-color: rgba(70, 145, 101, 1);
+    padding: 16px;
+    border-radius: 10px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.356);
+}
+
+.joing .last_p {
+    padding-top: 32px;
+    padding-bottom: 80px;
+}
+
+
+/* footer section css style */
+
+footer {
+    width: 100%;
+    background-color: rgba(0, 25, 49, 1);
+    margin-top: 80px;
+}
+
+.fotters {
+    width: 85%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 920px;
+    padding-top: 120px;
+    padding-bottom: 80px;
+}
+
+.social_links p {
+    font-size: 26px;
+    font-weight: 500;
+    color: rgba(255, 255, 255, 1);
+}
+
+.social_links i {
+    color: rgba(255, 255, 255, 1);
+    padding: 8px;
+    width: 20px;
+    height: 20px;
+}
+
+.p_last {
+    width: 85%;
+    margin: 0 auto;
+    border-top: 1px solid rgba(255, 255, 255, 0.466);
+    box-shadow: 0px 3px 5px rgba(0, 25, 49, 0.849);
+    display: flex;
+    justify-content: center ;
+    align-items: center;
+}
+
+.p_last p {
+    font-size: 16px;
+    font-weight: 400;
+    color: rgba(250, 250, 250, 1);
+    text-align: center;
+    padding-bottom: 30px;
+    padding-top: 40px;
+}
+
+/* footer section end */
