--- a/style.css
+++ b/style.css
@@ -7,13 +7,13 @@
 .inter {
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
-    font-weight: <weight>;
-    font-style: normal;
+
 }
 
 body {
     max-width: 1600px;
     background-color: rgba(255, 255, 255, 1);
+    font-family: "Inter", sans-serif;
 }
 
 
@@ -41,6 +41,16 @@ nav ul li a {
     color: rgba(0, 0, 0, 1);
 }
 
+nav ul li a:hover {
+    border-bottom: 0.5px solid rgba(70, 145, 101, 1);
+    box-shadow: 0px 0px 10px rgba(6, 239, 103, 0.348);
+    padding: 16px;
+    border-radius: 5px;
+    background-color: rgba(70, 145, 101, 1);
+    color: rgba(255, 255, 255, 1);
+}
+
+
 .btn a {
     text-decoration: none;
     font-size: 16px;
@@ -51,6 +61,15 @@ nav ul li a {
     margin-top: 24px;
     border-radius: 5px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.238);
+}
+
+.btn a:hover {
+    background-color: rgba(247, 246, 242, 1);
+    border-bottom: 0.5px solid rgba(70, 145, 101, 1);
+    box-shadow: 0px 0px 10px rgba(70, 145, 101, 1);
+    color: rgb(1, 108, 45);
+    padding: 10px;
+
 }
 
 /* Header section Css style end */
@@ -71,13 +90,20 @@ nav ul li a {
     color: rgba(70, 145, 101, 1);
     background-color: rgba(255, 255, 255, 1);
     padding: 8px 16px;
-
     border-radius: 16px;
 
 }
 
 .botn {
     padding-top: 100px;
+}
+
+.botn a:hover {
+    background-color: rgba(70, 145, 101, 1);
+    border-bottom: 0.5px solid rgba(70, 145, 101, 1);
+    box-shadow: 0px 0px 5px rgb(32, 209, 106);
+    color: rgba(247, 246, 242, 1);
+
 }
 
 .hero h1 {
@@ -120,6 +146,14 @@ nav ul li a {
     border-radius: 10px;
 }
 
+.btn_one a:hover {
+    background-color: rgba(247, 246, 242, 1);
+    border-bottom: 0.5px solid rgba(70, 145, 101, 1);
+    box-shadow: 1px 0px 10px rgba(3, 239, 101, 0.715);
+    color: rgb(1, 108, 45);
+    padding: 10px;
+}
+
 .See_btn a {
     text-decoration: none;
     font-size: 16px;
@@ -130,7 +164,13 @@ nav ul li a {
     border-radius: 10px;
 }
 
-
+.See_btn a:hover {
+    background-color: rgba(0, 0, 0, 0.395);
+    border-bottom: 0.5px solid rgba(70, 145, 101, 1);
+    box-shadow: 1px 0px 10px rgba(233, 235, 234, 0.715);
+    color: rgb(255, 255, 255);
+    padding: 30px;
+}
 
 /* banner css style end  */
 
@@ -182,7 +222,15 @@ nav ul li a {
 }
 
 .cad {
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.334);
+
+    box-shadow: 0px -5px 15px rgb(219 201 201 / 33%);
+    border-radius: 15px;
+}
+
+.cad:hover {
+    box-shadow: 0px -5px 20px rgba(70, 145, 101, 0.616);
+    background-color: rgba(247, 246, 242, 1);
+    padding: 10px;
 }
 
 .cad .carcle {
@@ -315,6 +363,13 @@ nav ul li a {
     border-radius: 10px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.356);
 }
+.btn_two a:hover{
+    background-color: rgba(10, 1, 1, 0.842);
+    border-bottom: 0.5px solid rgba(70, 145, 101, 1);
+    box-shadow: 0px 0px 10px rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
+    padding: 20px;
+}
 
 .joing .last_p {
     padding-top: 32px;
@@ -360,7 +415,7 @@ footer {
     border-top: 1px solid rgba(255, 255, 255, 0.466);
     box-shadow: 0px 3px 5px rgba(0, 25, 49, 0.849);
     display: flex;
-    justify-content: center ;
+    justify-content: center;
     align-items: center;
 }
 
