--- a/style.css
+++ b/style.css
@@ -228,9 +228,10 @@ nav ul li a:hover {
 }
 
 .cad:hover {
-    box-shadow: 0px -5px 20px rgba(70, 145, 101, 0.616);
-    background-color: rgba(247, 246, 242, 1);
-    padding: 10px;
+    box-shadow: 0px -5px 20px rgba(70, 145, 101, 0.616)rgba(70, 145, 101, 1);
+    background-color:  rgba(161, 240, 194, 0.841);
+    color: rgba(247, 246, 242, 1);
+    padding: 5px;
 }
 
 .cad .carcle {
